# ocr-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.ru.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
database/: db.py
handlers/: __init__.py  user_handlers.py
ocr_engines/: __init__.py  base_ocr.py  tesseract_ocr.py  yandex_ocr.py
src/ocr_bot/: config.py  main.py
src/ocr_bot/database/: db.py
src/ocr_bot/handlers/: __init__.py  user_handlers.py
src/ocr_bot/ocr_engines/: __init__.py  base_ocr.py  tesseract_ocr.py  yandex_ocr.py
src/ocr_bot/tests/: .env.test  conftest.py  test_db.py  test_rate_limiter.py  test_tesseract_ocr.py  test_user_handlers.py  test_yandex_ocr.py
src/ocr_bot/utils/: bot_commands.py  rate_limiter.py
utils/: bot_commands.py  rate_limiter.py
