[project]
name = "ocr-bot"
version = "1.0"
description = """Telegram OCR Bot in Python with Aiogram,
               Tesseract & Google/Yandex Vision,
               asynchronous access to SQLite,
               configuration via dotenv,
               logging via Loguru and ready to be deployed in Docker Compose."""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.21.0",
    "aiosqlite>=0.21.0",
    "environs>=14.2.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
